--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,10 @@ jobs:
         env:
           DOCKER_CLI_ACI: 1
           
-      - name: Docker Scout Image Scan
-        run: |
-          docker-scout quickview sudeep1919/myntra:latest
-          docker-scout cves sudeep1919/myntra:latest
+  deploy:
+      needs: build-analyze-scan
+      runs-on: self-hosted # Use your self-hosted runner label here
+
+       - name: Run the container
+          run: docker run -d --name myntra -p 3000:3000 sudeep1919/myntra:latest
       
