--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,10 @@
 name: Build
+
 on:
   push:
     branches:
       - main
+
 jobs:
   build:
     name: Build
@@ -11,6 +13,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      
       - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -18,21 +21,19 @@ jobs:
 
       - name: Docker Login
         run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-          
+
       - name: Docker build and push
         run: |
           # Run commands to build and push Docker images
           docker build -t myntra .
           docker tag myntra sudeep1919/myntra:latest
-          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
           docker push sudeep1919/myntra:latest
         env:
           DOCKER_CLI_ACI: 1
-          
-  deploy:
-      needs: build-analyze-scan
-      runs-on: self-hosted # Use your self-hosted runner label here
 
-       - name: Run the container
-          run: docker run -d --name myntra -p 3000:3000 sudeep1919/myntra:latest
-      
+  deploy:
+    needs: build
+    runs-on: self-hosted # Use your self-hosted runner label here
+    steps:
+      - name: Run the container
+        run: docker run -d --name myntra -p 3000:3000 sudeep1919/myntra:latest
