--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,4 +39,4 @@ jobs:
         run: docker run -d --name myntra -p 3000:3000 sudeep1919/myntra1:latest
         
       - name: Update kubeconfig
-        run: aws eks --region <ap-south-1> update-kubeconfig --name <EKS_CLOUD>
+        run: aws eks --region ap-south-1 update-kubeconfig --name EKS_CLOUD
