--- a/deployment-service.yml
+++ b/deployment-service.yml
@@ -31,4 +31,5 @@ spec:
   - protocol: TCP
     port: 80                 # Expose port 80
     targetPort: 3000
+    nodePort: 31000
   type: LoadBalancer
