--- a/deployment-service.yml
+++ b/deployment-service.yml
@@ -4,7 +4,7 @@ kind: Deployment
 metadata:
   name: myntra
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: myntra
@@ -32,4 +32,4 @@ spec:
     port: 80                 # Expose port 80
     targetPort: 3000
     nodePort: 31000
-  type: LoadBalancer
+  type: NodePort
